feat: Enhanced UI feedback system and button state management
- Add real-time frame selection feedback
  * Shows 'You have selected the frame [name]' when frame is selected
  * Reverts to 'Select a frame and click Copy to start' when no frame selected
  * Uses Figma selectionchange event for instant updates

- Implement inactive state for Copy button
  * Button disabled by default until frame is selected
  * Visual styling for disabled state (grayed out)
  * Prevents user confusion about when actions are available

- Increase viewport height from 280px to 380px
  * Eliminates scrolling when results and statistics are shown
  * Better accommodates all UI elements including stats and clear button

- Improve user experience flow
  * Clear visual feedback at each step
  * Intuitive button states based on current context
  * Enhanced tooltips and visual cues

- Technical improvements
  * Better state management with hasFrameSelected tracking
  * Cleaner message handling between plugin and UI
  * Maintained backward compatibility with existing functionality

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Copy Text Between Frames",
+  "name": "Move.Text",
   "id": "copy-text-between-frames",
   "api": "1.0.0",
   "main": "code.js",
